logs/ncexplorer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ncexplorer'...
Compiling './lib/python3.5/site-packages/ncexplorer/app.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/app.py", line 350
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ncexplorer/frame'...
Compiling './lib/python3.5/site-packages/ncexplorer/frame/base.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/frame/base.py", line 235
    print "Enter search parameters like this: variable=ta, institute=NCAR"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ncexplorer/frame/console.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/frame/console.py", line 93
    print "{0}: {1}".format(i, repo.id)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ncexplorer/frame/flaskgateway.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/frame/flaskgateway.py", line 28
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ncexplorer/plotter'...
Compiling './lib/python3.5/site-packages/ncexplorer/plotter/taylor.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/plotter/taylor.py", line 82
    print "Reference std:", self.refstd
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ncexplorer/repository.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/repository.py", line 98
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ncexplorer/test'...
Compiling './lib/python3.5/site-packages/ncexplorer/util.py'...
***   File "./lib/python3.5/site-packages/ncexplorer/util.py", line 185
    print "[Time: %s][Plev: %s] %s(%s points)" % (time_, plev, '-'*int(numcoords/1000), numcoords)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ncexplorer-0.0.1.dev5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
